# AP-Orel-Itay

./: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  Line.cpp  Line.h  MainTrain.cpp  Point.cpp  Point.h  README.md  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.cpp  commands.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
